<resources>
    <string name="app_name">app_movil</string>
    <string name="tv_titulo">Bienvenido a CC-APP</string>
    <string name="tv_descripcion">Una Aplicación que te ayudará a llevar una vida saludable, mejorando tu estado fisico y emocional</string>
    <string name="b_login">Iniciar Sesión</string>
    <string name="b_registro">Registro</string>
    <string name="title_activity_bottom_menu">bottom_menu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="b_profile">Perfil</string>
    <string name="b_food">Alimentos</string>

    <string name="label_username">Nombre de Usuario / Email</string>
    <string name="hint_username">Nombre de Usuario</string>
    <string name="label_pass">Contraseña</string>
    <string name="hint_pass">Contraseña</string>
    <string name="btn_entrar">Entrar</string>
    <string name="img_icon_desc">Icon App</string>


</resources>
